# gln-tcga-mrna

./: .gitignore  .gitmodules  LICENSE  README.md  justfile  pyproject.toml  run_experiment.py  train.py  train_models.py
TCGA-BreastInvasiveCarcinoma/: .gitignore  README.md  SOURCE.md  analyze.py  dataset.py  results.py  run_analysis.py  run_experiment.py  train.py
documentation/: .gitignore  bibliography.yml  data.yml  justfile  main.typ  plot_accuracies.ipynb  template.typ
src/gln_tcga/: __init__.py  analyze.py  attributions.py  baselines.py  dataset.py  experiments.py  plotting.py  results.py  train.py
src/gln_tcga/cli/: __init__.py  plot_curves.py  run_analysis.py  run_baselines.py  run_experiment.py  train_models.py
